[package]
name = "thumbnailer_rust"
version = "0.1.0"
authors = ["Vadym Maslov <mrvadamas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"]}
image = "0.23.0"
hyper-tls = "0.4.1"