[package]
name = "thumbnailer_rust"
version = "0.1.0"
authors = ["Vadym Maslov <mrvadamas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"]}
# Ideal aproach is to use rustls-tls but it has it's own shortcomings
# as when you have slow internet - because it does not have things like full duplex (https://github.com/ctz/rustls/issues/288) or more
# second-best approach is to use native-tls-vendored or native-tls if first option will somehow fail
reqwest = { version = "0.10.4", default-features = false, features = ["native-tls-vendored", "trust-dns"]}
image = "0.23.4"
futures = "0.3.4"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"]}
lazy_static = "1.4.0"
opentelemetry = "0.6.0"