[package]
name = "thumbnailer_rust"
version = "0.1.0"
authors = ["Vadym Maslov <mrvadamas@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: Remove all .expect() calls

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.15"
warp = "0.3"
toml = "0.5.8"
image = "0.23.14"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"]}
lazy_static = "1.4.0"
# opentelemetry = "0.6.0"